refactor: Update portfolio to reflect new role and details
The portfolio has been updated to reflect Govind Kumar Singh's current role as Senior Project Coordinator & Manager. This includes:

- Renaming the project package to 'govind-kumar-singh's-it-portfolio'.
- Updating the page title and metadata to include the full name and new title.
- Modifying the `PROFILE` constants to detail the updated role, experience, and skill categories, shifting focus from software engineering to project management.
- Adjusting the Gemini AI assistant's persona and knowledge base to align with the new professional profile.
- Updating the Navbar to display the full name "Govind Kumar Singh".
- Introducing new CSS animations for enhanced UI elements.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "govind's-professional-it-portfolio",
+  "name": "govind-kumar-singh's-it-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
